Fixing update and insert

--- a/src/Cormorant.App/Cormorant.App.csproj
+++ b/src/Cormorant.App/Cormorant.App.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Peter.cs" />
+    <Compile Include="Model\Shippers.cs" />
     <Compile Include="Model\Region.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
